polish 'Applicationoverview for Department Head'